project4/project4tests/.err
testprog2.c: In function ‘main’:
testprog2.c:3:16: error: expected ‘)’ before ‘;’ token
    3 |  printf("hello";
      |                ^
      |                )
testprog2.c:4:10: error: invalid suffix "ia" on integer constant
    4 |  int x = 4ia;
      |          ^~~
testprog2.c:5:11: error: expected ‘;’ before ‘}’ token
    5 |  return 0;
      |           ^
      |           ;
    6 | }
      | ~          
